--- a/something.css
+++ b/something.css
@@ -32,6 +32,7 @@
     nav ul {
       list-style: none;
       font-size: 20px;
+      font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
       color:crimson;
       background-color:linear-gradient(#33ccff, #ff99cc);
       padding: 0;
